--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<ul>
+    <li *ngFor="let country of countries">
+
+        {{ country.name }} - {{ country.population | number }}
+    </li>
+
+
+</ul>
