Optimized functions into one component cards.component to use in home display and search display of songs."

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,1 @@
-<ul>
-    <li *ngFor="let country of countries">
-
-        {{ country.name }} - {{ country.population | number }}
-    </li>
-
-
-</ul>
+<app-cards [items]="newReleases"></app-cards>
