--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,10 @@
-<p>search works!</p>
+<div class="row">
+    <div class="col">
+        <input #term type="text" (keyup)="search(term.value)" class="form-control" placeholder="Search artists">
+
+    </div>
+
+</div>
+
+
+<app-cards [items]="artists"></app-cards>
