--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,1 +1,24 @@
-<p>artist works!</p>
+<app-loading class="m-5" *ngIf="loadingArtist">
+</app-loading>
+<div *ngIf="!loadingArtist" class="row">
+    <div class="col-2">
+
+        <img [src]="artist.images | noimage" class="img-thumbnail img-circle" alt="">
+
+    </div>
+    <div class="col">
+        <h3>{{ artist.name }}</h3>
+        <p>
+            <a [href]="artist.external_urls.spotify">
+            go to artist page.
+            </a>
+        </p>
+    </div>
+    <div class="col-4" text-right>
+
+        <button routerLink="/search" class="btn btn-outline-danger">
+    back to search
+    </button>
+    </div>
+
+</div>
