adding toptracks to the artist selected

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,10 +1,9 @@
-<div class="row">
+<div class="row animated fadeIn">
     <div class="col">
         <input #term type="text" (keyup)="search(term.value)" class="form-control" placeholder="Search artists">
 
     </div>
+    <app-loading class="m-5" *ngIf="loading"></app-loading>
+    <app-cards [items]="artists"></app-cards>
 
 </div>
-
-<app-loading class="m-5" *ngIf="loading"></app-loading>
-<app-cards [items]="artists"></app-cards>
