--- a/src/app/components/artist/artist.component.html
+++ b/src/app/components/artist/artist.component.html
@@ -1,6 +1,5 @@
-<app-loading class="m-5" *ngIf="loadingArtist">
-</app-loading>
-<div *ngIf="!loadingArtist" class="row">
+<app-loading class="m-5" *ngIf="loadingArtist"></app-loading>
+<div *ngIf="!loadingArtist" class="row animated fadeIn">
     <div class="col-2">
 
         <img [src]="artist.images | noimage" class="img-thumbnail img-circle" alt="">
@@ -19,6 +18,34 @@
         <button routerLink="/search" class="btn btn-outline-danger">
     back to search
     </button>
+    </div>
+    <div class="row m-5 ">
+        <div class="col">
+            <table class="table text-white">
+                <thead>
+                    <tr>
+                        <th>Foto</th>
+                        <th>Album</th>
+                        <th> Song</th>
+                        <th>Preview</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let track of topTracksArray">
+                        <td>
+                            <img [src]="track.album.images | noimage" alt="" class="img-thumb">
+                        </td>
+                        <td>{{ track.album.name }}</td>
+                        <td>{{ track.name }}</td>
+                        <td>
+                            <audio *ngIf="track.preview_url" [src]="track.preview_url" controls></audio>
+                            <span *ngIf="!track.preview_url" class="badge badge-default">Vista previa no Disponible</span>
+                        </td>
+                    </tr>
+                </tbody>
+
+            </table>
+        </div>
     </div>
 
 </div>
